[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoo-runner-common"
dynamic = ["version"]
description = "Shared utilities for ZOO-Project CWL runners"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Aryan Khare", email = "kharearyan78@gmail.com" },
    { name = "Gérald Fenoy", email = "gerald.fenoy@geolabs.fr" },
]
keywords = ["zoo-project", "cwl", "runner", "workflow", "ogc", "api", "processes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "loguru>=0.7.0",
    "attrs>=21.3.0",
    "cwl-utils>=0.31.0",
]

[project.urls]
Homepage = "https://github.com/ZOO-Project/zoo-runner-common"
Documentation = "https://zoo-project.github.io/zoo-runner-common/"
Repository = "https://github.com/ZOO-Project/zoo-runner-common"
Issues = "https://github.com/ZOO-Project/zoo-runner-common/issues"
Changelog = "https://github.com/ZOO-Project/zoo-runner-common/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "zoo_runner_common/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=zoo_runner_common {args:tests}"

[tool.coverage.run]
source_pkgs = ["zoo_runner_common", "tests"]
branch = true
parallel = true
omit = [
    "zoo_runner_common/__about__.py",
]

[tool.coverage.paths]
zoo_runner_common = ["zoo_runner_common"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
